--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -165,3 +165,21 @@ html {
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
+
+
+.header-item{
+  @apply  px-1 border w-fit gap-2 h-full text-gray-200 items-center justify-center flex cursor-pointer;
+  
+}
+
+
+
+.header-item:hover>button{
+@apply opacity-50
+}
+
+
+
+*{
+  border: 0;
+}
