--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,185 +1,184 @@
 @tailwind base;
-  @tailwind components;
-  @tailwind utilities;
+@tailwind components;
+@tailwind utilities;
 
-  @layer base {
+@layer base {
     :root {
-      --background: 0 0% 100%;
-      --foreground: 222.2 84% 4.9%;
+        --background: 0 0% 100%;
+        --foreground: 222.2 84% 4.9%;
 
-      --card: 0 0% 100%;
-      --card-foreground: 222.2 84% 4.9%;
+        --card: 0 0% 100%;
+        --card-foreground: 222.2 84% 4.9%;
 
-      --popover: 0 0% 100%;
-      --popover-foreground: 222.2 84% 4.9%;
+        --popover: 0 0% 100%;
+        --popover-foreground: 222.2 84% 4.9%;
 
-      --primary: 222.2 47.4% 11.2%;
-      --primary-foreground: 210 40% 98%;
+        --primary: 222.2 47.4% 11.2%;
+        --primary-foreground: 210 40% 98%;
 
-      --secondary: 210 40% 96.1%;
-      --secondary-foreground: 222.2 47.4% 11.2%;
+        --secondary: 210 40% 96.1%;
+        --secondary-foreground: 222.2 47.4% 11.2%;
 
-      --muted: 210 40% 96.1%;
-      --muted-foreground: 215.4 16.3% 46.9%;
+        --muted: 210 40% 96.1%;
+        --muted-foreground: 215.4 16.3% 46.9%;
 
-      --accent: 210 40% 96.1%;
-      --accent-foreground: 222.2 47.4% 11.2%;
+        --accent: 210 40% 96.1%;
+        --accent-foreground: 222.2 47.4% 11.2%;
 
-      --destructive: 0 84.2% 60.2%;
-      --destructive-foreground: 210 40% 98%;
+        --destructive: 0 84.2% 60.2%;
+        --destructive-foreground: 210 40% 98%;
 
-      --border: 214.3 31.8% 91.4%;
-      --input: 214.3 31.8% 91.4%;
-      --ring: 222.2 84% 4.9%;
+        --border: 214.3 31.8% 91.4%;
+        --input: 214.3 31.8% 91.4%;
+        --ring: 222.2 84% 4.9%;
 
-      --radius: 0.5rem;
+        --radius: 0.5rem;
     }
 
     .dark {
-      --background: 222.2 84% 4.9%;
-      --foreground: 210 40% 98%;
+        --background: 222.2 84% 4.9%;
+        --foreground: 210 40% 98%;
 
-      --card: 222.2 84% 4.9%;
-      --card-foreground: 210 40% 98%;
+        --card: 222.2 84% 4.9%;
+        --card-foreground: 210 40% 98%;
 
-      --popover: 222.2 84% 4.9%;
-      --popover-foreground: 210 40% 98%;
+        --popover: 222.2 84% 4.9%;
+        --popover-foreground: 210 40% 98%;
 
-      --primary: 210 40% 98%;
-      --primary-foreground: 222.2 47.4% 11.2%;
+        --primary: 210 40% 98%;
+        --primary-foreground: 222.2 47.4% 11.2%;
 
-      --secondary: 217.2 32.6% 17.5%;
-      --secondary-foreground: 210 40% 98%;
+        --secondary: 217.2 32.6% 17.5%;
+        --secondary-foreground: 210 40% 98%;
 
-      --muted: 217.2 32.6% 17.5%;
-      --muted-foreground: 215 20.2% 65.1%;
+        --muted: 217.2 32.6% 17.5%;
+        --muted-foreground: 215 20.2% 65.1%;
 
-      --accent: 217.2 32.6% 17.5%;
-      --accent-foreground: 210 40% 98%;
+        --accent: 217.2 32.6% 17.5%;
+        --accent-foreground: 210 40% 98%;
 
-      --destructive: 0 62.8% 30.6%;
-      --destructive-foreground: 210 40% 98%;
+        --destructive: 0 62.8% 30.6%;
+        --destructive-foreground: 210 40% 98%;
 
-      --border: 217.2 32.6% 17.5%;
-      --input: 217.2 32.6% 17.5%;
-      --ring: 212.7 26.8% 83.9%;
+        --border: 217.2 32.6% 17.5%;
+        --input: 217.2 32.6% 17.5%;
+        --ring: 212.7 26.8% 83.9%;
     }
-  }
+}
 
-  @layer base {
+@layer base {
     * {
-      @apply border-border;
+        @apply border-border;
     }
     body {
-      @apply bg-background text-foreground;
+        @apply bg-background text-foreground;
     }
-  }
+}
 
-  @tailwind base;
+@tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 html {
-  @apply bg-primary w-screen h-screen;
+    @apply bg-primary w-screen h-screen;
 }
 
 .bg-darken {
-  background-color: #222426;
+    background-color: #222426;
 }
 
 .soure-item .source-codes {
-  @apply pl-4 relative;
+    @apply pl-4 relative;
 }
 
 .source-item-active {
-  @apply bg-blue-800 text-gray-300;
+    @apply bg-blue-800 text-gray-300;
 }
 
 .soure-item .source-codes:before {
-  content: "";
-  @apply absolute top-0 bottom-0 border-l border-dotted border-stone-500;
+    content: "";
+    @apply absolute top-0 bottom-0 border-l border-dotted border-stone-500;
 }
 
 .inp {
-  @apply block w-full rounded-md outline-none shadow-sm sm:text-sm bg-primary;
-  @apply text-gray-200;
-  @apply px-2 py-0.5;
+    @apply block w-full rounded-md outline-none shadow-sm sm:text-sm bg-primary;
+    @apply text-gray-200;
+    @apply px-2 py-0.5;
 }
 
 #titlebar {
-  @apply flex items-center justify-between text-gray-300 pl-2;
-  background: #1c1c1c;
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
+    @apply flex items-center justify-between text-gray-300 pl-2;
+    background: #1c1c1c;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
 }
 
 .titlebar-actions {
-  @apply flex items-center;
+    @apply flex items-center;
 }
 
 .titlebar-icon {
-  @apply py-0.5 cursor-pointer;
-  width: 30px;
-  text-align: center;
-  cursor: pointer;
+    @apply py-0.5 cursor-pointer;
+    width: 30px;
+    text-align: center;
+    cursor: pointer;
 }
 
 .titlebar-icon:hover {
-  background-color: #383838;
+    background-color: #383838;
 }
 
 #ttb-close:hover {
-  @apply bg-red-500 text-gray-100;
+    @apply bg-red-500 text-gray-100;
 }
 
 #editor {
-  padding-top: 27px;
+    padding-top: 27px;
 }
 
 .project-explorer {
-  @apply w-full text-left uppercase text-gray-400 text-xs;
+    @apply w-full text-left uppercase text-gray-400 text-xs;
 }
 
 .code-structure {
-  @apply px-2 overflow-y-auto;
-  height: calc(100vh - 70px);
+    @apply px-2 overflow-y-auto;
+    height: calc(100vh - 70px);
 }
 
 /* Styles for scrollbar */
 
 ::-webkit-scrollbar {
-  width: 7px;
-  height: 7px;
+    width: 7px;
+    height: 7px;
 }
 
 ::-webkit-scrollbar-track {
-  background: #222426;
+    background: #222426;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #465056;
+    background: #465056;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: #555;
+    background: #555;
 }
 
-
-.header-item{
-  @apply  px-1 py-1 w-fit  h-full text-gray-200 items-center justify-center flex cursor-pointer;
-  
+.header-item {
+    @apply px-1 py-1 w-fit  h-full text-gray-200 items-center justify-center flex cursor-pointer;
 }
 
-
-
-.header-item:hover>button{
-@apply opacity-50
+.header-item:hover > button {
+    @apply opacity-50;
 }
 
-
-/* 
+/*
 *{
  @apply border-none
 } */
+
+* {
+    @apply select-none;
+}
