--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -69,7 +69,9 @@
 @layer base {
     * {
         @apply border-border;
-        @apply select-none
+        @apply select-none;
+    user-select: none;
+
     }
     body {
         @apply bg-background text-foreground fixed inset-0;
@@ -82,7 +84,9 @@
 @tailwind utilities;
 
 html {
-    @apply bg-primary w-screen h-screen select-none;
+    @apply bg-primary w-screen h-screen;
+    user-select: none;
+
 }
 
 .bg-darken {
